fix about button not selecting, sidebar animation not working properly on mobile about page

--- a/src/components/search-bar/search-bar.module.css
+++ b/src/components/search-bar/search-bar.module.css
@@ -37,7 +37,6 @@
   right: 9px;
   cursor: pointer;
   font-size: 0px;
-  margin-right: -5px;
 }
 
 .searchBar input[type="submit"]:hover {
